update readme, add links to menubar

--- a/index.html
+++ b/index.html
@@ -22,9 +22,17 @@
 	<body onload="startup()">
 
 		<div id="menubar">
-      <div class="menu-item" id="menu-restart"><p>Restart</p></div>
+      <div class="menu-item menu-link" id="menu-restart"><p>Restart</p></div>
       <div class="menu-item"><p>Battle No. <span id="lblCount">-</span></p></div>
       <div class="menu-item"><p><span id="lblProgress">0</span>% sorted</p></div>
+      <div id="menu-right">
+        <a href="http://www.sakuragakuin.jp/">
+          <div class="menu-item menu-link"><p>Homepage</p></div>
+        </a>
+        <a href="https://github.com/sakurasort/sakurasort.github.io">
+          <div class="menu-item menu-link"><p>Github</p></div>
+        </a>
+      </div>
 		</div>
 
 		<div align="center">
