--- a/bmsong.html
+++ b/bmsong.html
@@ -26,6 +26,9 @@
       <div class="menu-item"><p>Battle No. <span id="lblCount">-</span></p></div>
       <div class="menu-item"><p><span id="lblProgress">0</span>% sorted</p></div>
       <div id="menu-right">
+        <a href="index.html">
+          <div class="menu-item menu-link"><p>Sakurasort</p></div>
+        </a>
         <a href="http://www.babymetal.jp/">
           <div class="menu-item menu-link"><p>Homepage</p></div>
         </a>
