--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
       <div class="menu-item"><p>Battle No. <span id="lblCount">-</span></p></div>
       <div class="menu-item"><p><span id="lblProgress">0</span>% sorted</p></div>
       <div id="menu-right">
+        <a href="bmsong.html">
+          <div class="menu-item menu-link"><p>BM Song Sort</p></div>
+        </a>
         <a href="http://www.sakuragakuin.jp/">
           <div class="menu-item menu-link"><p>Homepage</p></div>
         </a>
