--- a/bmsong.html
+++ b/bmsong.html
@@ -21,22 +21,20 @@
 
 	<body onload="startup()">
 
-		<div id="menubar">
-      <div class="menu-item menu-link" id="menu-restart"><p>Restart</p></div>
-      <div class="menu-item"><p>Battle No. <span id="lblCount">-</span></p></div>
-      <div class="menu-item"><p><span id="lblProgress">0</span>% sorted</p></div>
-      <div id="menu-right">
-        <a href="index.html">
-          <div class="menu-item menu-link"><p>Sakurasort</p></div>
-        </a>
-        <a href="http://www.babymetal.jp/">
-          <div class="menu-item menu-link"><p>Homepage</p></div>
-        </a>
+	  <div id="menubar">
+        <div class="menu-item menu-link" id="menu-restart"><p>Restart</p></div>
+        <div class="menu-item"><p>Battle No. <span id="lblCount">-</span></p></div>
+        <div class="menu-item"><p><span id="lblProgress">0</span>% sorted</p></div>
         <a href="https://github.com/sakurasort/sakurasort.github.io">
-          <div class="menu-item menu-link"><p>Github</p></div>
+          <div class="menu-item menu-link menu-right"><p>Github</p></div>
         </a>
-      </div>
-		</div>
+	    <a href="http://www.babymetal.jp/">
+          <div class="menu-item menu-link menu-right"><p>Homepage</p></div>
+        </a>
+        <a href="index.html">
+          <div class="menu-item menu-link menu-right"><p>Sakurasort</p></div>
+        </a>
+	  </div>
 
 		<div align="center">
 			<table id="mainTable">
